--- a/templates/index.html
+++ b/templates/index.html
@@ -147,7 +147,7 @@
         <p style="color: #8b949e; font-size: 13px; margin-bottom: 10px;">
             Bu proje açık kaynak geliştirilmektedir. Geliştiriciye bir kahve ısmarla! ☕
         </p>
-        <a href="https://www.buymeacoffee.com/SENIN_KULLANICI_ADIN" target="_blank" class="donate-btn">
+        <a href="https://https://buymeacoffee.com/scr1pt" target="_blank" class="donate-btn">
             ☕ Destek Ol (1$)
         </a>
     </div>
