--- a/templates/index.html
+++ b/templates/index.html
@@ -72,17 +72,17 @@
             align-items: center;
         }
         .severity-HIGH, .severity-CRITICAL {
-            background-color: #3d1c1c; /* Koyu Kırmızı */
+            background-color: #3d1c1c;
             color: #ff7b72;
             border-left: 5px solid #ff7b72;
         }
         .severity-MEDIUM {
-            background-color: #36260e; /* Koyu Turuncu */
+            background-color: #36260e;
             color: #d29922;
             border-left: 5px solid #d29922;
         }
         .severity-LOW {
-            background-color: #0e283e; /* Koyu Mavi */
+            background-color: #0e283e;
             color: #79c0ff;
             border-left: 5px solid #79c0ff;
         }
@@ -96,7 +96,6 @@
             margin-top: 20px;
             border-radius: 6px;
         }
-        /* DESTEK BUTONU STİLİ */
         .support-box {
             margin-top: 40px;
             text-align: center;
@@ -135,7 +134,7 @@
     <div class="subtitle">STATIC APPLICATION SECURITY TESTING (SAST) TOOL</div>
     
     <form method="POST">
-        <textarea name="code_input" placeholder="# Kodunuzu buraya yapıştırın...&#10;# Code Sentinel güvenlik taramasını başlatsın.&#10;&#10;import os&#10;api_key = '...' ">{{ code_input }}</textarea>
+        <textarea name="code_input" placeholder="# Kodunuzu buraya yapıştırın...&#10;# Code Sentinel güvenlik taramasını başlatsın.">{{ code_input }}</textarea>
         <button type="submit">TARAMAYI BAŞLAT ⚡</button>
     </form>
 
@@ -165,7 +164,7 @@
         <p style="color: #8b949e; font-size: 13px; margin-bottom: 10px;">
             Bu proje açık kaynak geliştirilmektedir. Geliştiriciye bir kahve ısmarla! ☕
         </p>
-        <a href="https://https://buymeacoffee.com/scr1pt" target="_blank" class="donate-btn">
+        <a href="https://www.buymeacoffee.com/scr1pt" target="_blank" class="donate-btn">
             ☕ Destek Ol (1$)
         </a>
     </div>
